[gd_scene load_steps=8 format=2]

[ext_resource path="res://script/Main.gd" type="Script" id=1]
[ext_resource path="res://script/Camera.gd" type="Script" id=2]
[ext_resource path="res://script/CharacterManager.gd" type="Script" id=3]
[ext_resource path="res://script/Level.gd" type="Script" id=4]
[ext_resource path="res://Tiles.tres" type="MeshLibrary" id=5]
[ext_resource path="res://EndPortal.tscn" type="PackedScene" id=6]
[ext_resource path="res://script/Menu.gd" type="Script" id=7]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="CameraController" type="Spatial" parent="." index="0" groups=[
"Tremor",
]]

pause_mode = 2
script = ExtResource( 2 )
_sections_unfolded = [ "Pause" ]
threshold = 1.0

[node name="Camera" type="Camera" parent="CameraController" index="0"]

transform = Transform( 1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 0, 17, 15 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 25.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="CamOrigPos" type="Spatial" parent="CameraController" index="1"]

transform = Transform( 1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 0, 17, 15 )
_sections_unfolded = [ "Transform" ]

[node name="Characters" type="Node" parent="." index="1"]

script = ExtResource( 3 )

[node name="Level" type="Node" parent="." index="2"]

script = ExtResource( 4 )

[node name="Navigation" type="Navigation2D" parent="Level" index="0"]

_sections_unfolded = [ "Transform" ]

[node name="GridMap" type="GridMap" parent="Level" index="1"]

theme = ExtResource( 5 )
cell_size = Vector3( 1, 1, 1 )
cell_octant_size = 10
cell_center_x = false
cell_center_y = false
cell_center_z = false
cell_scale = 1.0
collision_layer = 1
collision_mask = 1
data = {
"cells": PoolIntArray(  )
}
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_editor_clip_": 0
}

[node name="MeltingTiles" type="Node" parent="Level" index="2"]

[node name="Label" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 16.0
margin_right = 51.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CamTarget" type="Spatial" parent="." index="4"]

[node name="EndPortal" parent="." index="5" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6, 0 )
visible = false

[node name="Menu" type="Node" parent="." index="6"]

pause_mode = 2
script = ExtResource( 7 )
_sections_unfolded = [ "Pause" ]

[node name="TargetOrigin" type="Spatial" parent="Menu" index="0"]

[node name="Target" type="Position3D" parent="Menu/TargetOrigin" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
_sections_unfolded = [ "Transform" ]


